...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feature2">


    <Button
        android:id="@+id/backBtn_feature2"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:text="Back"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
